--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
 <head>
-<meta http-equiv="Refresh" content="0; url='chrome://dino'" />
+<meta http-equiv="Refresh" target="blank" content="0;  url='chrome://dino'" />
 </head>
 </html>
