--- a/index.html
+++ b/index.html
@@ -2,4 +2,10 @@
 <head>
 <meta http-equiv="Refresh" target="blank" content="0;  url='chrome://dino'" />
 </head>
+  <body>
+    <script>
+      // Simulate an HTTP redirect:
+window.location.replace("chrome://dino");
+      </scirpt>
+      </body>
 </html>
