--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <html>
 <head>
-<meta http-equiv="Refresh" target="blank" content="0;  url='chrome://dino'" />
 </head>
   <body>
-    <script>
-window.location.replace("chrome://dino");
-      </scirpt>
+<script>
+  window.location.href = "chrome://dino";
+</script>
       </body>
 </html>
